--- a/client/partials/common/header.html
+++ b/client/partials/common/header.html
@@ -1,7 +1,7 @@
 <header>
     <figure class="logo">
         <a href="http://www.mol.org">
-            <img src="/app/img/logo.png" alt="Map of Life" /></a>
+            <img src="/location/assets/img/logo.png" alt="Map of Life" /></a>
         <a class="gmbalogo" href="http://www.mountainbiodiversity.org/">
             <img src="http://www.mountainbiodiversity.org/img/gmba_logo.jpg" alt="GMBA" /></a>
     </figure>
